--- a/page_su.html
+++ b/page_su.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>三田村氏庭園</title>
+  <title>越前かるた-三田村氏庭園</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/su.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,109 @@
        <h2>す　：　素敵なお庭と　石組見事　三田村氏庭園</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>石組が見事な芸術的お庭</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/三田村氏庭園１.png">
+       <img src="pageimages/三田村氏庭園２.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        江戸時代に作られた池泉回遊式(ちせんかいゆうしきていえん)の畜山泉水式庭園(ちくさんせんすい？しきていえん)。<br>
+        高い品質が自慢(じまん)の越前和紙の産地、今立五箇地区で、江戸時代前期から和紙の生産・販売の権益(権利と利益のこと)・地位を独占してきた三田村氏の庭園です。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>池泉回遊式とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>池を中心にぐるっと見て回るお庭</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       「回遊式(かいゆうしき)」というのは庭園内を歩き回って鑑賞(かんしょう)する形式の庭園です。<br>飛び石、樹々、築山、滝などがあります。<br>
+       <br>
+       「池泉回遊式(ちせんかいゆうしき)」なので池を中心に見て回る庭園ということになります。<br>池の中の小島に橋などもかけられます。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>畜山泉水式とは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>池の他に林や田園などをつなげたお庭</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       池泉回遊式で作られた池の他に、茶室や林、田園などいろんなものをつなげたお庭を畜山泉水式庭園といいます。<br>畜山林泉式ともいいます。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>特徴は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>石の置き方がお見事！ </p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       「石組(いしぐみ)」という、自然の石を組み合わせて景色を表現する技法がすばらしいとされています。<br>中央の島にツル、カメの縁起物の石組みがあり、築山、高低差90センチの滝などを配置しています。<br><br>
+       芸術上の価値や日本庭園史での学術上の価値が高いとされていて、2015年には国の名勝に指定されました。
+     </p>
+    </div>
+
+
+
+     <div class="balloon2-right">
+      <p>お問い合わせは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前製紙工場</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       三田村氏庭園の見学には3日前以上の事前の予約が必要なので注意！(メールが見られないことがあるので電話での申し込みの方がオススメ)<br>
+       <br>
+       ▼予約はこちら<br>
+       有限会社越前製紙工場<br>
+      ・越前市大滝町12-5<br>
+     </p>
+    </div>
+    <div class="official-site">
+      <a href="http://www.echizen-seishi.co.jp/publics/index/11/" class="btn btn--red btn--radius btn--cubic">越前製紙工場　見学申し込みはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>お庭シリーズができてきましたね(笑)こちらも越前かるたで初めて知りました。近くに大瀧神社があるので合わせて行ってみるのもいいかもしれませんね。石組みは実家の庭をいじったことがありますが、一列並べるだけでも一苦労…。これほど広範囲に石組みを作るのはどのくらい時間がかかるものなのでしょうか。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
