そ　越前万歳

--- a/page_so.html
+++ b/page_so.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前万歳</title>
+  <title>越前かるた-越前万歳</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/so.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,76 @@
        <h2>そ　：　祖先から受け継がれし　春を呼ぶ舞　越前万歳</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>味真野地区で行われる新春の祝福芸</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/越前万歳.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        味真野地区や上大坪地区に伝えられた新春の祝福芸で、昔は千秋(せんず)万歳、野大坪(のおつぼ)万歳と言われました。<br>
+        毎年1月1日に味真野神社・味真野商工会館で行われています。
+        <br>1995年、国の重要無形民俗文化財に登録されました。
+        <br>
+        <br>
+        ▼越前万歳の様子
+      </p>
+     </div>
+
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/xZBNRsfjZLY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+     <div class="balloon2-right">
+      <p>歴史は？</p>
     </div>
+    <div class="hitokoto">
+     <p>はじまりはよく分かっていない⁉</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>継体天皇にまつわる伝説などもありますが、その起源(きげん)について詳しくは分かっていません。
+      <br>今のような形の舞いになったのは江戸時代と考えられており、毎年、越前の各藩はもちろんのこと、加賀の金沢の城下でも演じていたといわれています。<br>
+      演目についてはかつて48段あったと言われていますが、現在はそのうちの8段ほどが継がれています。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>特徴は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>弓型のバチ</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      小さい締め太鼓をエゴの木で弓形に作ったバチで叩くのが、越前万歳の特徴となっています。<br>「太夫(たゆう)」と「才蔵(さいぞう)」と呼ばれる2人が太鼓の調子に合わせて舞って歌います。
+     </p>
+    </div>
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>実際に聞くと結構ポップだなぁと思いました。起源についてよくわかっていないというのも気になるところですよね。余談ですが「万歳」は「バンザイ」と読むのかと思っていましたが「マンザイ」なんですね。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
