--- a/page_tu.html
+++ b/page_tu.html
@@ -133,11 +133,11 @@
 
      <div class="page-setumei">
       <p>
-       住所　　▶　越前市真柄町7-37<br>
-       営業時間▶　10：30～15：00<br>
-       定休日　▶　年中無休(1月1～3日は除く)<br>
-       電話　　▶　0778-21-0272<br>
-       価格　　▶　おろしそば　590円<br>
+       住所　　　≫　越前市真柄町7-37<br>
+       営業時間　≫　10：30～15：00<br>
+       定休日　　≫　年中無休(1月1～3日は除く)<br>
+       電話　　　≫　0778-21-0272<br>
+       価格　　　≫　おろしそば　590円<br>
        栽培、製粉までこだわりのそば！落ち着いた空間でそばを楽しめる！
       </p>
      </div>
@@ -156,11 +156,11 @@
 
      <div class="page-setumei">
      <p>
-      住所　　▶　越前市吾妻町3-33 <br>
-      営業時間▶　11：00～18：00<br>
-      定休日　▶　月曜日<br>
-      電話　　▶　0778-21-5088<br>
-      価格　　▶　おろしそば　700円<br>
+      住所　　　≫　越前市吾妻町3-33 <br>
+      営業時間　≫　11：00～18：00<br>
+      定休日　　≫　月曜日<br>
+      電話　　　≫　0778-21-5088<br>
+      価格　　　≫　おろしそば　700円<br>
       すぐ隣にある「御清水不動尊の水」(ふくいのおいしい水認定)を使った手打ちそば！生そばのお持ち帰りもできます。
      </p>
      </div>
@@ -182,11 +182,11 @@
 
      <div class="page-setumei">
      <p>
-      住所　　▶　越前市村国2丁目5-52 <br>
-      営業時間▶　11：00～17：00<br>
-      定休日　▶　火曜日<br>
-      電話　　▶　0778-42-8026<br>
-      価格　　▶　越前おろしそば　700円<br>
+      住所　　　≫　越前市村国2丁目5-52 <br>
+      営業時間　≫　11：00～17：00<br>
+      定休日　　≫　火曜日<br>
+      電話　　　≫　0778-42-8026<br>
+      価格　　　≫　越前おろしそば　700円<br>
       独自ブレンドのこだわりの十割そばは、コシがありなめらかでいい香り！食後にはスイーツも楽しめます。
      </p>
      </div>
