り　花筐公園

--- a/page_ri.html
+++ b/page_ri.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>花筐公園</title>
+  <title>越前かるた-花筐公園</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ri.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,109 @@
        <h2>り　：　凛とした　桜と紅葉　花筐公園</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>春は桜、秋は紅葉の季節を楽しむひろびろ公園</p>
+     </div>
+     <div class="omise">
+      <img src="pageimages/花筐公園桜.png">
+       <img src="pageimages/花筐公園.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        桜の名所として有名な花筐(かきょう)公園。<br>
+        春は約1000本の桜が咲き誇りますが、秋には紅葉も楽しむことができます。<br>
+        そのほかにも園内にはツツジ、アジサイ、サツキなどもあり、季節ごとに違った花を楽しむことができます。<br>
+        <br>
+        ▼花筐公園内のマップ
+      </p>
+     </div>
+     <div class="shasin">
+      <img src="pageimages/花筐公園マップ.png">
     </div>
+
+
+    <div class="balloon2-right">
+      <p>ゆかりの人物は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>継体天皇</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      継体天皇が皇子のころ暮らしていたといわれています。<br>
+      園内には福井県の天然記念物の薄墨桜(樹齢600年以上)があり、これは継体天皇が愛する照日の前(てるひのまえ)に形見として残したものと言い伝えられ、その後次第に色が薄くなっていったため薄墨桜と呼ばれるようになったといわれています。<br>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>名前の由来は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>世阿弥の能『花筐(はながたみ)』</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      世阿弥(ぜあみ)という人の能(舞踊・音楽が中心の舞台のこと)の演目『花筐(はながたみ)』が名前の由来になっています。<br>
+      天皇になった継体天皇に、照日の前が花筐を持って会いに行く話です。<br>
+      ここでの「花筐」とは竹ひごで編んで作った花かごのことを指しています。
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>お祭りがある？</p>
+    </div>
+    <div class="hitokoto">
+     <p>春と秋にお祭りがある！</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      ≪春≫　はながたみまつり<br>
+      ・毎年4月上旬<br>
+      園内のソメイヨシノ約1000本を見ることができるお祭り。期間中は夜桜のライトアップや、子ども太鼓、よさこい、写真コンテストなどたくさんのイベントが行われます。</p></div>
+      <div class="omise">
+        <img src="pageimages/はながたみ桜.jpg">
+        <img src="pageimages/はながたみまつり.jpg">
+      </div>
+
+      <br>
+
+      <div class="page-setumei">
+        <p>≪秋≫　はながたみもみじ祭り<br>
+      ・毎年11月上旬<br>
+     赤や黄色に色づいた紅葉が楽しめるお祭り。期間中は園内をライトアップするほか、週末には吹奏楽部の演奏や地元の味覚が味わえる模擬店が並んでいます。</p> </div>
+     <div class="omise">
+      <img src="pageimages/花筐もみじ.jpg">
+      <img src="pageimages/花筐もみじまつり.jpg">
+    </div>
+   
+   
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>絵札では左下が桜、右上が紅葉を表しています。公園内は桜、紅葉に囲まれながら歩くと自然の豊かさを存分に感じることができました。車で来られるかたは駐車場に気を付けてくださいね。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
