--- a/page_re.html
+++ b/page_re.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>武生公会堂記念館</title>
+  <title>越前かるた-武生公会堂記念館</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/re.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,77 @@
        <h2>れ　：　歴史ある　昭和の面影　公会堂</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>昭和初期の面影を残す駅近のミニ博物館</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/武生公会堂記念館.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        武生駅前近くに建つ記念館。<br>
+        1階では越前市の歴史や人物などを、期間を区切り内容を変えながら展示。2階では越前市の歴史や文化を紹介するために年4回の企画展をしています。<br>
+        また公会堂の貴賓室を忠実に復元し建設当初の雰囲気(ふんいき)を今に伝えています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>歴史は？</p>
     </div>
+    <div class="hitokoto">
+     <p>取り壊しの危機があった⁉</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      昭和4年に開館し、武生の文化や行政の中心でありランドマークであった公会堂。<br>
+      平成に入るとその老朽化により使用を停止し、取り壊しが検討されましたが、多くの市民らの要望で建物は保存。平成7年に現在の姿になりました。昭和初期の面影を残す建物として17年に国の有形文化財に登録されました。<br>
+      現在は博物館施設として利用されています。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-21-3900</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市蓮菜町8-8<br>
+      営業時間　≫　10：00～18：00(入館は17：30まで)<br>
+      定休日　　≫　月曜日・年末年始<br>
+      電話　　　≫　0778-21-3900<br>
+     </p>
+    </div>
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>玄関のつくりがとてもおしゃれな建物です。中は外観と比べるときれいですが、明るすぎない室内が雰囲気づくりに役立っています。２階は特に昭和初期の面影が残る部屋があるので注目です。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
