る　大瀧神社

--- a/page_ru.html
+++ b/page_ru.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>大滝神社</title>
+  <title>越前かるた-大瀧神社</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ru.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -38,7 +43,7 @@
 
   <main>
     <div class="page-header">
-      <h1>大滝神社</h1>
+      <h1>大瀧神社</h1>
     </div>
 
     <div class="content-body">
@@ -54,10 +59,123 @@
      </div>
 
      <div class="yomihuda">
-       <h2>る　：　類を見ない　紙の神様　大滝神社</h2>
+       <h2>る　：　類を見ない　紙の神様　大瀧神社</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>日本で唯一「紙の神様」を祀る神社</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/大瀧神社.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        山頂にある「奥の院」と、山のふもとに建つ「里宮」からなる神社です。<br>
+        奥の院は「延喜式神名帳(えんぎしきじんみょうちょう)」(926年)という、平安時代に作られた神社の一覧表にも記録されており、日本で唯一の紙の神様、川上御前(かわかみごぜん)が祀られています。<br>
+      </p>
+     </div>
+     <div class="official-site">
+      <a href="http://www.echizenwashi.jp/goddess_of_paper/index.html#3" class="btn btn--red btn--radius btn--cubic">岡太神社・大瀧神社　特設サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
     </div>
+
+
+     <div class="balloon2-right">
+      <p>川上御前の伝説とは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>紙の漉(す)き方を教えた美しい女性</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/川上御前.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      ■川上御前の伝説■<br>
+      今から1500年前ほど前、越前五箇という地区を流れる岡太川の上流に、一人の美しい女性が現れ次のような言葉を人々に伝えました。<br>
+      <br>
+      「この村里は、谷間で田畑が少なく暮らしにくい場所ですね。ですが、清らかな谷川と緑深い山々に恵まれていますから、紙を漉いて生計を立てれば暮らしは楽になるでしょう。」<br>
+      <br>
+      そして女性は村人に紙の漉き方を教えました。<br>
+      村人たちはたいそう感謝し女性に名前を尋ねると、「川上に住む者です」と答えたため、「川上御前(かわかみごぜん)」と呼んで崇めました。<br>
+      川上御前は、万物を産み出し育てる水の神様とも言われ、子育ての神とも信仰されたそうです。<br>
+      <br>
+      <br>
+      1500年前、紙すきの技を伝えた川上御前ですが、今でもこの今立地区では紙漉き産業が行われています。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>特徴は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>複雑な形の屋根や彫刻(ちょうこく)</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/里宮彫刻.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      里宮の本殿と拝殿は、江戸時代後期の社殿建築の粋を集めて建てられたものです。<br>
+      <br>
+      ★屋根<br>
+      檜皮葺(ひわだぶき)というヒノキの木の皮を使って作る屋根は、幾重にも波が寄せあうような複雑な形をしていて、おそらく日本一といわれています。<br><br>
+      ★彫刻<br>
+      拝殿正面には獅子(しし)、龍、鳳凰(ほうおう)、草花の彫刻。側面と背面には中国の故事(こじ)という大昔の物語を題材にした丸彫りの彫刻があります。<br>
+      <br>
+      昭和59年には、歴史的記録の確かさや建築の美しさから、国の重要文化財に指定されました。(名称は大瀧神社)
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>名前が2つ？</p>
+    </div>
+    <div class="hitokoto">
+     <p>本殿が2つあるから</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+      大瀧神社は本来は「岡太(おかもと)神社・大瀧(滝)神社」といいます。(岡本じゃないよ！)<br>
+      名前が2つ並んでいるのは、奥の院は岡太神社、大瀧神社の本殿が並んで立っていますが、下の里宮は共有だからです。<br>
+     </p>
+    </div>
+
+    <div class="shasin">
+      <p>▼里宮</p>
+      <img src="pageimages/里宮.png">
+      <p>▼奥の院(中央が大瀧神社、右が岡太神社)</p>
+      <img src="pageimages/奥の院.png">
+    </div>
+
+
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>里宮は近くで見ると本当に彫刻が美しく、人の手で作られたことに感服してしまします。奥の院は清純な気が流れていて、一種のパワースポットになっているそうです。複雑な形で、絵札にするのに苦労した一枚です。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
