--- a/page_hi.html
+++ b/page_hi.html
@@ -102,7 +102,7 @@
 
 
      <div class="balloon2-right">
-      <p>どうして校庭の真ん中に？</p>
+      <p>どうして真ん中に？</p>
     </div>
     <div class="hitokoto">
      <p>校庭を広くしたから！</p>
