--- a/page_ke.html
+++ b/page_ke.html
@@ -84,7 +84,7 @@
      </div>
 
      <div class="balloon2-right">
-      <p>何を見ることができるの？</p>
+      <p>何が見られるの？</p>
     </div>
     <div class="hitokoto">
      <p>四季の緑や花が楽しめる！</p>
