--- a/page_yo.html
+++ b/page_yo.html
@@ -69,13 +69,13 @@
        <p>一言でいうと？</p>
      </div>
      <div class="hitokoto">
-       <p>オムライスにトンカツをのせ、こだわりソースをかけた武生のソウルフード</p>
+       <p>オムライスにトンカツをのせた武生のソウルフード</p>
      </div>
 
      <div class="page-setumei">
        <p>30年前に誕生した、ボリューム満点で、大人から子供まで大人気なボルガライス！
        <br>
-       基本的にはオムライス＋トンカツ＋ソースですが、お店によってオムライスの中のご飯や、かけるソースの味が少しずつ違うので、食べ比べてみることもおすすめです。
+       基本的にはオムライス＋トンカツ＋こだわりソースですが、お店によってオムライスの中のご飯や、かけるソースの味が少しずつ違うので、食べ比べてみることもおすすめです。
        </p>
      </div>
 
