え　越前和紙

--- a/page_e.html
+++ b/page_e.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前和紙</title>
+  <title>越前かるた-越前和紙</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/e.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,190 @@
        <h2>え　：　越前和紙　紙の王に　ふさわしい紙</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>1500年の歴史が詰まった最高品質の和紙</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/越前和紙.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        主に今立(いまだて)地区で作られている歴史の古い和紙です。<br>
+        昭和51年、越前市では越前打刃物に続いて2番目に伝統工芸品の指定を受けました。
+        また、越前奉書と越前鳥の子紙は国の重要無形文化財となっています。
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>特徴は？</p>
     </div>
+    <div class="hitokoto">
+     <p>種類と品質！</p>
+    </div>
+   
+    <div class="page-setumei">
+     <p>
+      越前和紙の特徴は、豊かな感性を刺激する生成色(きなり)の優雅な美しさと高い品質。<br>
+      種類がたくさんあることと質の高さでは全国1を誇っています！
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>つくり方は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>最初は水？厚みを作って干す！</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      主な原料は楮(こうぞ)、三椏(みつまた)、雁皮(がんぴ)という、植物の皮の繊維(せんい)などを使います。<br>
+      これですこしとろっとした水のような原料をつくり、その中に簀桁(すげた)という道具を入れて前後にゆすって少しずつ厚みを出します。<br>
+      (これを「和紙を漉(す)く」と言います！)
+     </p>
+    </div>
+    <div class="shasin">
+      <p>▼簀桁(すげた)</p>
+      <img src="pageimages/すげた.jpg">
+    </div>
+    <div class="page-setumei">
+      <p>
+       外して圧力をかけて水分をしぼったあと、乾かせば完成です！
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>歴史は？</p>
+    </div>
+    <div class="hitokoto">
+     <p>今も昔もたくさん使われてきました</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      約1500年前、川上御前が今立五箇の村人たちに紙すきを伝えたのが始まりです。<br>
+      <br>
+       戦国時代になり、紙がたくさん使われるようになると、越前和紙はその品質の高さから高級紙として使われるようになりました。<br>
+       特に「越前奉書」という和紙は、『御上天下一』の印を使うことが許されて江戸幕府でよく使われるようにになり、「越前鳥の子紙」は「紙の王にふさわしい紙」といわれて桂離宮というふすまなどに使われました。<br>
+       <br>
+       越前和紙はとっても格式高いものだったのです！<br>
+       (この2つの和紙は国の重要無形文化財に登録されています。)<br>
+       <br>
+       現代では小さな名刺、ハガキなどのふだん使いのものから、越前奉書紙などの格式の高い紙まで幅広く使われています。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>もっとよく知るには？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前和紙の里</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/越前和紙の里.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       越前和紙の体験ができる「パピルス館」、工芸士のわざを見ることができる「卯立の工芸館」、越前和紙の発祥や歴史などを展示する「紙の文化博物館」など、越前和紙にまつわる体験や見学を楽しむことができるエリアです。
+     </p>
+    </div>
+
+    <br>
+
+    <div class="omise">
+      <p>▼パピルス館</p>
+      <img src="pageimages/パピルス館.jpg">
+      <img src="pageimages/パピルス館和紙.jpg">
+    </div>
+    <div class="page-setumei">
+      <p>
+        住所　　　≫　越前市新在家町8-44<br>
+       営業時間　≫　9：00～16：00<br>
+       休館日　　≫　年末年始<br>
+       電話　　　≫　0778-42-1363<br>
+       自分だけの和紙を作ることができるパピルス館。はがきやしおりの他、うちわやランプシェードを作ることもできます！
+      </p>
+     </div>
+     <div class="official-site">
+      <a href="http://www.echizenwashi.jp/features/papyrus.html" class="btn btn--red btn--radius btn--cubic">パピルス館　詳しくはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    <br>
+
+    <div class="omise">
+      <p>▼卯立(うだつ)の工芸館</p>
+      <img src="pageimages/卯立の工芸館.jpg">
+      <img src="pageimages/卯立.jpg">
+    </div>
+    <div class="page-setumei">
+      <p>
+        住所　　　≫　越前市新在家町9-21-2<br>
+       営業時間　≫　9：30～17：00(紙漉き見学は16:00まで)<br>
+       休館日　　≫　毎週火曜日(祝日は営業)・年末年始<br>
+       電話　　　≫　0778-43-7800<br>
+       伝統工芸士が昔ながらの道具を使って和紙を漉く様子や、屋外での和紙の天日干しを見ることができます。
+      </p>
+     </div>
+     <div class="official-site">
+      <a href="http://www.echizenwashi.jp/features/udatsu.html" class="btn btn--red btn--radius btn--cubic">卯立の工芸館　詳しくはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    <br>
+
+    <div class="omise">
+      <p>▼紙の文化博物館</p>
+      <img src="pageimages/紙の文化博物館.jpg">
+      <img src="pageimages/文化博物館.jpg">
+    </div>
+    <div class="page-setumei">
+      <p>
+        住所　　　≫　越前市新在家町11-12<br>
+       営業時間　≫　9：30～17：00<br>
+       休館日　　≫　毎週火曜日(祝日は営業)・年末年始<br>
+       電話　　　≫　0778-42-0016<br>
+        越前和紙の歴史を知ることができる他、道具や越前和紙の作品の展示もしています。
+      </p>
+     </div>
+     <div class="official-site">
+      <a href="http://www.echizenwashi.jp/features/bunka.html" class="btn btn--red btn--radius btn--cubic">紙の文化博物館　詳しくはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>こちらも越前市の伝統工芸品といったら…ですよね！学校の卒業証書を漉きに行ったことがあるという方も多いのではないでしょうか。(私も行きました！)「でっかいかるたで大合戦！！」で使用したでっかいかるたは、この越前和紙を段ボールに貼り合わせて制作していますし、この越前かるたの説明書も越前和紙を使っています。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+   <div class="access">
+    <h1>アクセス</h1>
+  
+   <div class="map">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1228.0361259538197!2d136.2441281483369!3d35.91122250498214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a92cad8971d5%3A0xa8ecf36b606f6d79!2z6LaK5YmN5ZKM57SZ44Gu6YeM!5e0!3m2!1sja!2sjp!4v1604495373215!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+   </div>
+ </div>
+
+   
 
     <hr>
 
