--- a/page_to.html
+++ b/page_to.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>南越線</title>
+  <title>越前かるた-南越線</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/to.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,74 @@
        <h2>と　：　隣の街まで　南越線　かつて武生を走ってた</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+      <p>一言でいうと？</p>
     </div>
+    <div class="hitokoto">
+     <p>かつて武生を走っていた電車</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/南越線.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      福井鉄道南越線は、かつて福井県武生市(現越前市)の社武生駅から岡本新駅(現越前市今立地区)を通って鯖江市戸ノ口駅までを結んでいた福井鉄道の鉄道路線です。
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+     <p>歴史は？</p>
+   </div>
+   <div class="hitokoto">
+    <p>1981年に廃止されました</p>
+   </div>
+  
+   <div class="page-setumei">
+    <p>
+      1915年　武生－岡本新　開業<br>
+      1924年　戸ノ口まで　開業<br>
+      1945年　社名変更や会社合併で福井鉄道の一路線に<br>
+      1971年　粟田部―戸ノ口　廃止<br>
+      1981年　残りの区間　廃止<br>
+    </p>
+   </div>
+
+   <div class="balloon2-right">
+    <p>まだ電車が残ってる？</p>
+  </div>
+  <div class="hitokoto">
+   <p>村国駅に電車が残っています！</p>
+  </div>
+  <div class="omise">
+    <img src="pageimages/南越線１.png">
+    <img src="pageimages/南越線２.png">
+  </div>
+  <div class="page-setumei">
+   <p>
+    村国駅跡地は今は住宅街になっていますが、個人施設の鉄道博物館があり、福井鉄道福武線で運行されていた160形電車の一両が展示されています。<br>
+    地元ではちょっとした名物です！
+   </p>
+  </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>実は村国駅跡地、実家のものすごい近くにあります(笑) 私の母親が当時通学の際に利用していたそうです。母校の国高小学校では、まちなか探検で散策しに行った思い出もありますね。そのころは電車の中にも入れたので、よく秘密基地にして遊んでいました。秋になるとコスモスが近くに咲いて、とっても和やかな景色になります。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
