--- a/page_ya.html
+++ b/page_ya.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>しきぶ温泉湯楽里</title>
+  <title>越前かるた-しきぶ温泉湯楽里</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ya.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,97 @@
        <h2>や　：　やわらかな美人の湯　越前唯一　しきぶ温泉湯楽里</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+      <p>一言でいうと？</p>
     </div>
+    <div class="hitokoto">
+     <p>日帰りもお泊りもできる隠れ温泉</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/湯楽里１.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      木に囲まれた静かなロケーションの中、隠れ家のような湯宿です。日帰り休憩、宿泊、宴会にも利用することができます。越前市唯一の温泉です。<br>
+      県外からなど遠くからお風呂に入りに来る人もたくさんいます。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>どんな温泉？</p>
+    </div>
+    <div class="hitokoto">
+     <p>11種類の温泉が楽しめる！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/湯楽里２.png">
+      <img src="pageimages/湯楽里３.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      35℃から45℃までと温度の違う5つのお風呂の他、薬湯、ジャグジー、露天風呂など11種類の充実したお風呂が楽しめます。<br>
+      通称「美人の湯」と呼ばれる滑らかなお湯が自慢です！<br>
+      <br>
+      効能としては、切り傷、神経症、五十肩、疲労回復などがあります。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-25-7800</p>
+    </div>
+   
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市白崎町68-8 <br>
+      営業時間　≫　6：00～23：00(入浴時間)<br>
+      休館日　　≫　第2水曜日<br>
+      電話　　　≫　0778-25-7800<br>
+      <br>
+      宿泊の場合<br>
+      チェックイン16：00／チェックアウト10：00<br>
+      <br>
+      ■入館料<br>
+      ・大人(65歳未満)　　650円<br>
+      (※6：00~9：00、17：00~23：00は600円になります)<br>
+      ・高齢者(65歳以上)　600円<br>
+      ・こども(3~15歳)　　300円<br>
+      ・障がい者　　　　　500円<br>
+      <br>
+     
+
+     </p>
+     </div>
+     <div class="official-site">
+      <a href="http://yurari-yu.jp/" class="btn btn--red btn--radius btn--cubic">湯楽里　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+     </p>
+    </div>
+
+    </div>
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>家族で何度か訪れたことがあります。山の中にありますが、全然古めかしくなくて綺麗な温泉宿です。昔は長～い階段を上っていけたのですが、今は斜めに動くエレベーターがついています。施設も充実していてリラックスできること間違いなしです！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
   </div><div class="access">
     <h1>アクセス</h1>
