--- a/page_mo.html
+++ b/page_mo.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>梅花藻</title>
+  <title>越前かるた-梅花藻</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/mo.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,88 @@
        <h2>あ　：　藻に咲く　梅花藻　きれいな川に　白い花</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+      <p>一言でいうと？</p>
     </div>
+    <div class="hitokoto">
+     <p>清水にしか咲かない藻に咲く白い花</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/梅花藻.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      清水にしか咲かないといわれるめずらしい水中花。<br>梅の花に似た花を藻に咲かせるので「梅花藻」と書き、「ばいかも」と読みます。
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>どんな花？</p>
+    </div>
+    <div class="hitokoto">
+     <p>育つ条件がむずかしい⁉</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+       梅花藻はキンポウゲ科の水草で、藻に咲くめずらしい花です。水中から1センチほど白い花をのぞかせています。<br>
+       <br>
+       育つ条件がむずかしく<br>
+       ①水温が14℃前後<br>
+       ②常に水の流れがある清らかな水<br>
+       なので、種類によっては絶滅危惧種(ぜつめつきぐしゅ)に指定されています。
+       <br><br>
+      花言葉は「幸福になります」だそうです。
+      白くて可憐な姿にぴったりですね！
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>どこで見られるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>治左川(じさがわ)</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/治左川井戸.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      味真野地区を流れる治佐川は県内きっての清流で、6月下旬から8月いっぱいにかけて梅花藻の花が咲きます。<br>
+      治左川上流には、水源である湧き水を汲み上げている井戸があり、井戸水は「ふくいのおいしい水」の認定を受けています。<br>
+      <br>
+      場所：越前市上真柄町<br>
+      (せまい路地から入るので注意！)
+     </p>
+    </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>福井は水がきれいでおいしいとよく言われますが、梅花藻のような花があるとは知りませんでした！時期が過ぎてしまっていたのでこの「越前かるた」の制作時は見ることができませんでしたが、いつか実物を見てみたいです！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+   
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.128005413289!2d136.22508879999998!3d35.894880500000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a986fb536555%3A0x61436a51355cdaa6!2z5rK75bem5bed5LqV5oi4!5e0!3m2!1sja!2sjp!4v1604577032238!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
 
     <hr>
 
