--- a/page_mu.html
+++ b/page_mu.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>谷口家</title>
+  <title>越前かるた-谷口家</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/mu.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,9 +62,100 @@
        <h2>む　：　昔の民家　谷口家　囲炉裏の香りで　江戸気分</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+      <p>一言でいうと？</p>
+    </div>
+    <div class="hitokoto">
+     <p>味真野苑の中にある江戸時代の古民家</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/谷口家.jpg">
     </div>
 
-  </div><div class="access">
+    <div class="page-setumei">
+     <p>
+      味真野地区にある味真野苑には、江戸時代の古民家と言われる「(旧)谷口家」があります。<br>
+      昭和52年に国の重要文化財に登録されています。
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>誰のお家？</p>
+    </div>
+    <div class="hitokoto">
+     <p>横市町の農家さん</p>
+    </div>
+    
+    <div class="page-setumei">
+     <p>
+      農家の家ですが、元から味真野苑にあったわけではなく、横市町にあったものが移動してきました。
+      1808年に建てられたといわれています。<br>
+      かやぶきの屋根で、角が生えたような三角形が特徴的です！
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>中には入れる？</p>
+    </div>
+    <div class="hitokoto">
+     <p>入れます！</p>
+    </div>
+    <div class="omise">
+      <img src="pageimages/谷口家内１.jpg">
+      <img src="pageimages/谷口家内２.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>
+      中に入ると照明がついていて、広い土間や座敷が見えます。<br>
+      真ん中には囲炉裏があり、週に3回火を入れているので、屋敷内はいぶしたいい香りがします。<br>
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>どうやって行くの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>味真野苑の左がわ</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　　　≫　越前市余川町55-1 <br>
+      休館日　　≫　月曜日<br>
+      入場料　　≫　無料<br>
+      <br>
+      万葉菊花園近くの入り口からずーっと左に歩いていくと谷口家につきます！<br>
+      <br>
+      ▼味真野苑のマップ
+     </p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/味真野苑マップ.jpg">
+    </div>
+    
+
+  </div>
+
+   <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>谷口家は、一度中でお茶会を開いたことがあります。昔の家とはいえ造りがしっかりしているからできることですね。重要文化財でここまで触れ合えるものは珍しいのではないでしょうか？いぶした香りはとっても落ち着くので一休みに最適です。
+     </p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+  
+  
+  <div class="access">
     <h1>アクセス</h1>
 
     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11518.311147829068!2d136.23115402557545!3d35.892704933544564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a963b093ffff%3A0x370da8a7c0fc3632!2z6YeN6KaB5paH5YyW6LKh5pen6LC35Y-j5a625L2P5a6F!5e0!3m2!1sja!2sjp!4v1599641466570!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
