め　サマフェス

--- a/page_me.html
+++ b/page_me.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>サマーフェスティバル</title>
+  <title>越前かるた-サマーフェスティバル</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/me.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,89 @@
        <h2>め　：　目にうつる　大輪の花火　サマーフェスティバル</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前市の夏のお祭りの代表！</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/サマーフェスティバル.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>
+        8月中旬に行われる夏祭りです。<br>
+        「日野川の花火大会」といえば馴染み深いでしょうか？<br>
+       三夜にわたって開催され、祭り中は屋台も並びます。
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>お祭りの内容は？</p>
     </div>
+    <div class="hitokoto">
+     <p>ふるさと踊りや花火大会</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/ふるさと踊り.png">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      ★第一夜　オープニング<br>
+      武生中央公園をねり歩くふるさと踊りや迫力あるヨサコイが披露(ひろう)されます！<br>
+      (2019年は丹南ケーブルテレビ制作の新曲「越前武生の夕暮れは」が披露されました／歌・野路由紀子)<br>
+      <br>
+      ★第二夜<br>
+      遊具運行、屋台がでます。<br>
+      <br>
+      ★第三夜　メイン<br>
+      いよいよ花火大会！<br>
+      約1万５千発の花火が村国山を背景に、日野川を舞台にして打ちあがります。毎年10万人が訪れる人気花火大会です！
+     </p>
+    </div>
+
+    <div class="balloon2-right">
+      <p>見どころは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>間近でみる大迫力花火！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/花火.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       サマーフェスティバルの特徴は、なんといっても花火との近さ！<br>
+       日野川の万代橋(ばんだいばし)から見る花火は本当に距離が近くて、「間近で見ることができる花火」として県外から見に来るお客さんもいるんだとか。<br>
+       <br>
+      最近では音楽に合わせて花火を打ち上げる企画をしており、こちらも大人気です！<br>
+      <br>
+      ▼サマーフェスティバル花火大会の様子(2018)
+     </p>
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/C2UUGjhqjPU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>「日野川の花火大会」越前市民であれば誰もが行ったことがあるのではないでしょうか？私も毎年見に行っていますが、河川敷で見るとほぼ真上で花火が上がっているので燃えカスがパラパラと…(笑)でもそれだけ距離が近いということです！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <hr>
 
